tests/lean/unfold_crash.lean.expected.out
unfold_crash.lean:8:9: error: invalid 'unfold', 'nat.succ' is not a definition
